# projclean

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yaml
src/: app.rs  builtin.csv  common.rs  config.rs  default.csv  default.yaml  event.rs  fs.rs  lib.rs  main.rs  share.rs  walk.rs
tests/: fixtures.rs  rule.rs
