[package]
name = "projclean"
version = "0.7.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Project dependencies & build artifacts cleanup tool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/projclean"
repository = "https://github.com/sigoden/projclean"
categories = ["command-line-utilities"]
keywords = ["command-line", "clean", "tui"]

[dependencies]
anyhow = "1.0.75"
jwalk = "0.8.1"
ratatui = "0.25.0"
crossterm = "0.27.0"
crossbeam-utils = "0.8.16"
clap = "4.4.11"
ctrlc = "3.4.1"
inquire = "0.6.2"
remove_dir_all = "0.8.2"
threadpool = "1.8.1"
glob = "0.3.1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
